Phase 2: Add 5 new tools — text, data_transform, environment, system_info, git
- TextTool: regex match/replace (5s ReDoS timeout), word count, line diff, JSON/XML formatting
- DataTransformTool: JSON dot-notation query, CSV/JSON/XML conversion, base64, hashing (MD5-SHA512)
- EnvironmentTool: get/list/has with hardcoded sensitive variable blocklist (PASSWORD, SECRET, TOKEN, KEY, etc.)
- SystemInfoTool: OS/CPU/RAM/disk info, process list with filtering/sorting, network interfaces
- GitTool: read-only status/log/diff/branch/blame with path validation, argument sanitization, 30s timeout
- All tools use .NET 8 BCL only — zero new NuGet dependencies
- Test coverage: 63 → 150 tests (all passing)
- Tools: 4 → 9 total

--- a/src/McpServer/appsettings.json
+++ b/src/McpServer/appsettings.json
@@ -29,6 +29,10 @@
     "TimeoutSeconds": 30
   },
 
+  "Environment": {
+    "AdditionalBlockedVariables": []
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
