Phase 3.1: CI/CD pipeline and self-contained single-file binaries
- Add .github/workflows/ci.yml: build + test on every push and PR to master
- Add .github/workflows/release.yml: matrix publish for win-x64, linux-x64, osx-arm64 on v* tags; attaches binaries to GitHub Release
- Add workflow-level permissions to ci.yml (actions, checks, contents, pull-requests)
- Add <Version>1.0.0</Version> to McpServer.csproj, overridden at publish time
- Update README: add CI badge, mark Phase 3.1 complete in roadmap

--- a/src/McpServer/McpServer.csproj
+++ b/src/McpServer/McpServer.csproj
@@ -7,6 +7,8 @@
     <Nullable>enable</Nullable>
     <AssemblyName>dotnet-mcp-server</AssemblyName>
     <RootNamespace>McpServer</RootNamespace>
+    <!-- Argha - 2026-02-23 - version overridden at publish time via -p:Version=X.Y.Z in the release workflow -->
+    <Version>1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
