--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,3 +87,38 @@ jobs:
         with:
           files: ./artifacts/*
           generate_release_notes: true
+
+  # Argha - 2026-02-23 - publish NuGet package for dotnet tool install -g dotnet-mcp-server
+  publish-nuget:
+    name: Publish to NuGet.org
+    needs: build-binaries
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup .NET 8
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '8.0.x'
+
+      # Argha - 2026-02-23 - strip the leading 'v' from the tag to get a clean semver (e.g. v1.0.0 -> 1.0.0)
+      - name: Extract version
+        id: version
+        shell: bash
+        run: echo "VERSION=${GITHUB_REF_NAME#v}" >> "$GITHUB_OUTPUT"
+
+      - name: Pack
+        run: >
+          dotnet pack src/McpServer
+          --configuration Release
+          -p:Version=${{ steps.version.outputs.VERSION }}
+          --output ./nupkg
+
+      - name: Push to NuGet.org
+        run: >
+          dotnet nuget push ./nupkg/*.nupkg
+          --api-key ${{ secrets.NUGET_API_KEY }}
+          --source https://api.nuget.org/v3/index.json
+          --skip-duplicate
