Phase 3.5: Add Dockerfile + docker-compose (one-command setup)
Multi-stage Alpine build (sdk -> test -> publish -> runtime:8.0-alpine).
Tests run as a gated stage — docker build fails if any of the 164 tests fail.
docker-compose bundles mcp-server + SQL Server 2022-latest with a healthcheck.
Config mounted at /home/app/.config/dotnet-mcp-server/appsettings.json (picked
up automatically by existing ResolveConfigDirectory logic on Linux).

New files: Dockerfile, .dockerignore, docker-compose.yml,
           docker/appsettings.example.json, .env.example
Updated:   README.md (Option C Docker section, Phase 3 roadmap all [x] done),
           .gitignore (allow appsettings.example.json to be committed)

--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,8 @@ Thumbs.db
 # Secrets - DO NOT COMMIT
 appsettings.*.json
 !appsettings.json
+# Argha - 2026-02-23 - allow example configs to be committed (no secrets)
+!appsettings.example.json
 secrets.json
 *.pfx
 *.key
