Phase 5.1: Add plugin architecture (drop-in tool DLLs)
- New McpServer.Plugin.Abstractions project: ITool, IProgressReporter,
  NullProgressReporter, JsonSchema, ToolCallResult, ContentBlock,
  PluginContext — the full plugin contract in a standalone assembly
- PluginLoadContext: per-DLL AssemblyLoadContext that shares the
  abstractions assembly with the host to preserve ITool type identity
- PluginLoader: scans plugins/ dir, loads each DLL in isolation,
  instantiates tools via ctor(PluginContext) or parameterless ctor,
  logs and skips bad DLLs — never prevents server startup
- PluginsSettings added to Settings.cs (Enabled, Directory)
- appsettings.json: new Plugins section with Enabled/Directory/Config
- Program.cs wired: plugin tools loaded and registered before
  BuildServiceProvider(), alongside built-in tools
- examples/SamplePlugin: reference implementation showing both
  constructor patterns (parameterless + PluginContext)
- 10 new tests (265 -> 275), all passing

--- a/src/McpServer/McpServer.csproj
+++ b/src/McpServer/McpServer.csproj
@@ -22,6 +22,11 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
+  <!-- Argha - 2026-02-24 - Phase 5.1: contract types for plugin architecture (ITool, ToolCallResult, etc.) -->
+  <ItemGroup>
+    <ProjectReference Include="..\McpServer.Plugin.Abstractions\McpServer.Plugin.Abstractions.csproj" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
