--- a/src/McpServer/appsettings.json
+++ b/src/McpServer/appsettings.json
@@ -33,6 +33,12 @@
     "AdditionalBlockedVariables": []
   },
 
+  "Plugins": {
+    "Enabled": true,
+    "Directory": "plugins",
+    "Config": {}
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
