Rename NuGet package IDs to McpServer.Net
Replace personal-name-prefixed package IDs across the board:
- Argha.dev.McpServer → McpServer.Net (global tool package)
- Argha.dev.McpServer.Templates → McpServer.Net.Templates (dotnet new template package)

Update all references in csproj files, release workflow, and README.
Also clean up Phase 5.1 phase-label prefixes from code comments.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -124,7 +124,7 @@ jobs:
           --skip-duplicate
 
   # Argha - 2026-02-24 - publish the dotnet new template package so plugin authors can run
-  # "dotnet new install Argha.dev.McpServer.Templates" and scaffold plugins in one command.
+  # "dotnet new install McpServer.Net.Templates" and scaffold plugins in one command.
   # Runs after publish-nuget so McpServer.Plugin.Abstractions is already on NuGet.org when
   # the template package resolves its PackageReference during end-user restore.
   publish-templates:
