--- a/src/McpServer.Plugin.Abstractions/McpServer.Plugin.Abstractions.csproj
+++ b/src/McpServer.Plugin.Abstractions/McpServer.Plugin.Abstractions.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <!-- Argha - 2026-02-24 - Phase 5.1: root namespace matches the host so plugin types share namespaces -->
+    <!-- Argha - 2026-02-24 - root namespace matches the host so plugin types share namespaces -->
     <RootNamespace>McpServer</RootNamespace>
     <AssemblyName>McpServer.Plugin.Abstractions</AssemblyName>
     <Version>1.0.0</Version>
