Rename NuGet package IDs to DotnetMcpServer
McpServer.Net was rejected by NuGet (reserved prefix). Switch to:
- DotnetMcpServer (global tool)
- DotnetMcpServer.Templates (dotnet new template package)

Also restore --skip-duplicate to release workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -121,9 +121,10 @@ jobs:
           dotnet nuget push ./nupkg/*.nupkg
           --api-key ${{ secrets.NUGET_API_KEY }}
           --source https://api.nuget.org/v3/index.json
+          --skip-duplicate
 
   # Argha - 2026-02-24 - publish the dotnet new template package so plugin authors can run
-  # "dotnet new install McpServer.Net.Templates" and scaffold plugins in one command.
+  # "dotnet new install DotnetMcpServer.Templates" and scaffold plugins in one command.
   # Runs after publish-nuget so McpServer.Plugin.Abstractions is already on NuGet.org when
   # the template package resolves its PackageReference during end-user restore.
   publish-templates:
@@ -158,3 +159,4 @@ jobs:
           dotnet nuget push ./nupkg-templates/*.nupkg
           --api-key ${{ secrets.NUGET_API_KEY }}
           --source https://api.nuget.org/v3/index.json
+          --skip-duplicate
