Phase 6.1: Multi-database support + Security & Trust documentation
Code changes:
- Add IDatabaseProvider abstraction in src/McpServer/Data/
- Implement SqlServerProvider, PostgreSqlProvider, MySqlProvider, SqliteProvider
- DatabaseProviderFactory resolves provider from config (case-insensitive)
- ConnectionStringSanitizer strips passwords from all error output
- Per-provider error classifier maps error codes to plain-English fix instructions
- SqlQueryTool refactored to use IDatabaseProvider via factory
- Add configure_connection action — no password field by design
- Add test_connection action with sanitized diagnostics
- SqlConnectionConfig gains Provider field (default SqlServer, backwards compatible)
- Add Npgsql 8.x, MySqlConnector 2.x, Microsoft.Data.Sqlite 8.x packages
- 44 new tests (275 -> 319), all passing

Documentation changes:
- Add docs/security/trust.md — Security & Trust guide
- Add Security nav section to mkdocs.yml
- Add "Your Secrets Stay Safe" callouts to SQL, FileSystem, HTTP, Environment, Git tool docs
- Update docs/index.md with trust section and link
- Update docs/configuration/security.md with link to trust page
- Update docs/tools/sql.md for multi-DB support and new actions
- Mark Phase 6.1 complete in docs/roadmap.md and README.md

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,9 +53,11 @@ nav:
     - Environment: tools/environment.md
     - System Info: tools/system-info.md
     - Git: tools/git.md
+  - Security:
+    - Why You Can Trust This Tool: security/trust.md
+    - Security Constraints: configuration/security.md
   - Configuration:
     - Profiles: configuration/profiles.md
-    - Security Constraints: configuration/security.md
   - Plugins:
     - Overview: plugins/index.md
     - Quickstart: plugins/quickstart.md
