Phase 6.4: Add response caching with per-tool TTL
- IResponseCache / NullResponseCache / MemoryResponseCache in src/McpServer/Caching/
- CacheKeyBuilder: deterministic key = toolName:action:sha256[0..16] (strips action + _meta, sorts args)
- MemoryResponseCache: ConcurrentDictionary backing store, injectable clock, bounded capacity (MaxEntries)
- Eviction: expired entries first, then oldest-inserted when still at capacity
- CacheSettings: Enabled, DefaultTtlSeconds (60), ToolTtls per-tool overrides, MaxEntries (1000)
- Per-tool TTLs in appsettings.json: datetime/system_info/git/environment=0, sql_query=300, http_request=120, filesystem=60, text/data_transform=600
- McpServerHandler: cache check after rate-limit, before ExecuteAsync; only IsError=false results cached
- Cache hits audited with outcome CacheHit
- 35 new tests (NullResponseCache, MemoryResponseCache, CacheKeyBuilder, McpServerHandler wiring)
- All 408 tests passing

--- a/src/McpServer/appsettings.json
+++ b/src/McpServer/appsettings.json
@@ -39,6 +39,23 @@
     "Config": {}
   },
 
+  "Cache": {
+    "Enabled": true,
+    "DefaultTtlSeconds": 60,
+    "MaxEntries": 1000,
+    "ToolTtls": {
+      "datetime": 0,
+      "system_info": 0,
+      "git": 0,
+      "environment": 0,
+      "sql_query": 300,
+      "http_request": 120,
+      "filesystem": 60,
+      "text": 600,
+      "data_transform": 600
+    }
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
