Phase 7: Add tool-level API key authentication and per-key authorization
- Add Auth layer: IAuthorizationService, NullAuthorizationService, ApiKeyAuthorizationService, AuthorizationResult, ApiKeyIdentity
- Add AuthSettings + ApiKeyConfig to Settings.cs (Auth:Enabled defaults to false — fully backwards-compatible)
- Add Auth section to appsettings.json documenting the schema
- Resolve MCP_API_KEY env var on initialize; check auth before rate limiting so denied calls never consume tokens
- Add ClientIdentity field to AuditRecord; unauthorized calls audited with outcome 'Unauthorized'
- Register IAuthorizationService in Program.cs (NullAuthorizationService when disabled)
- Update all test BuildHandler callsites to pass NullAuthorizationService.Instance as 10th arg
- Add 33 new auth tests (NullAuthorizationServiceTests, ApiKeyAuthorizationServiceTests, McpServerHandlerAuthTests)
- 408 → 441 tests, all passing

--- a/src/McpServer/appsettings.json
+++ b/src/McpServer/appsettings.json
@@ -56,6 +56,18 @@
     }
   },
 
+  "Auth": {
+    "Enabled": false,
+    "RequireAuthentication": true,
+    "ApiKeys": {
+      "change-this-key-in-production": {
+        "Name": "Claude Desktop",
+        "AllowedTools": ["*"],
+        "AllowedActions": {}
+      }
+    }
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
