Restructure README with collapsible details, update docs roadmap, fix NuGet project URL
- Wrap Quick Start, Supported Clients, Tool Usage Examples, Configuration
  Reference, Architecture, Project Structure, Adding Custom Tools, and
  Plugin Development in closed <details> tags; Troubleshooting stays open
- Remove completed Roadmap section from README
- Update docs/roadmap.md: add Phase 6.2–6.4 and Phase 7 as complete,
  remove the Upcoming section
- Change PackageProjectUrl in McpServer.csproj to the docs site

--- a/src/McpServer/McpServer.csproj
+++ b/src/McpServer/McpServer.csproj
@@ -18,7 +18,7 @@
     <PackageTags>mcp;model-context-protocol;ai;claude;copilot;dotnet;tools;filesystem;sql;http;git</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/Argha713/dotnet-mcp-server</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/Argha713/dotnet-mcp-server</PackageProjectUrl>
+    <PackageProjectUrl>https://argha713.github.io/dotnet-mcp-server/</PackageProjectUrl>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
