--- a/src/McpServer/appsettings.json
+++ b/src/McpServer/appsettings.json
@@ -52,8 +52,15 @@
       "http_request": 120,
       "filesystem": 60,
       "text": 600,
-      "data_transform": 600
+      "data_transform": 600,
+      "document": 0
     }
+  },
+
+  "Document": {
+    "MaxFileSizeMb": 25,
+    "MaxOutputChars": 50000,
+    "MaxExcelRows": 5000
   },
 
   "Auth": {
