Phase 8.3: Add table extraction (Word + PDF) and progress reporting
- WordDocumentReader.ExtractTablesAsync: real OpenXml Table/TableRow/TableCell extraction
- PdfDocumentReader.ExtractTablesAsync: heuristic grid detection via word bounding boxes
- DocumentTool: new extract_tables action; progress reporting (0→100) on all actions
- TestDocumentFactory: WriteTempDocxWithTable, WriteTempPdfWithTable, shared BuildPdf helper
- 8 new tests: Word table integration, PDF table integration, DocumentTool unit (506 total)
- README: Phase 8 marked complete

--- a/src/McpServer/appsettings.json
+++ b/src/McpServer/appsettings.json
@@ -6,15 +6,15 @@
 
   "FileSystem": {
     "AllowedPaths": [
-      "C:\\Users\\YourUsername\\Documents",
-      "C:\\Projects"
+      "C:\\Users\\CODECLOUDS-ARGHA\\Desktop\\Argha\\New folder",
+      "C:\\Users\\CODECLOUDS-ARGHA\\Desktop\\Argha\\Test Folder"
     ]
   },
 
   "Sql": {
     "Connections": {
       "SampleDB": {
-        "ConnectionString": "Server=localhost;Database=SampleDB;Trusted_Connection=True;TrustServerCertificate=True;",
+        "ConnectionString": "Server=CISPL-IO-779\\SQLEXPRESS;Database=devprojectetdb;User Id=sa;Password=Kolkata@1;Trusted_Connection=True;TrustServerCertificate=True;",
         "Description": "Local sample database"
       }
     }
